<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/menu_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            app:simpleItems="@array/options_list" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/input_field"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_txt"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/menu">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_field_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

<!--    <ImageView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:contentDescription="@string/equals"-->
<!--        app:layout_constraintStart_toEndOf="@id/input_field"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/output_field"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/menu" />-->

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/output_field"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:hint="@string/output_txt"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/output_field_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/from_unit"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:hint="@string/from_unit"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/input_field" >

        <AutoCompleteTextView
            android:id="@+id/from_unit_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/to_unit"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:hint="@string/to_unit"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output_field" >

        <AutoCompleteTextView
            android:id="@+id/to_unit_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.Material3.Button.TonalButton.Icon"
        android:id="@+id/swap_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/swap_button"
        android:layout_marginStart="20dp"
        app:icon="@drawable/baseline_swap_horiz_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal" />

    <Button
        android:id="@+id/convert_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/convert_button"
        android:layout_marginEnd="20dp"
        app:icon="@drawable/baseline_calculate_24"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>